fixed dark mode

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,41 @@
 body {
     margin: 0;
+    background-color: #DAE0E6;
+}
+
+h1.dark-mode
+{
+}
+
+p.dark-mode
+{
+}
+
+body.dark-mode {
+    background-color: #121212;
+    color: white;
+}
+
+#color-theme-switch
+{
+    margin: 5px 5px 0 0;
+    transform: scale(0.5);
+    display: inline-flex;
+}
+
+.dark-mode #top-bar
+{
+    background-color: #242424;
 }
 
 #top-bar {
     display: flex;
+    font-size: x-large;
+    background-color: white;
 }
 
 #site-title {
-    margin: 0;
+    margin: 10px 0 0 10px;
     white-space: nowrap;
 }
 
@@ -31,7 +59,7 @@ nav{
 
 nav ul {
     list-style-type: none;
-    margin: 0;
+    margin: 10px 0 0 0;
     padding: 0;
     text-align: center;
     position: absolute; 
@@ -40,6 +68,10 @@ nav ul {
  nav li {
     display:inline-flex;
  }
- 
- nav li a {
+
+ nav ul li a {
+    font-style: none;
+    text-decoration: none;
+    color: #54968a;
+    margin-right: 50px;
  }
